# tenantBuddy

./: .gitmodules  documentInterpreter.py  output.json  output_schema.json  package-lock.json  pyproject.toml  test.py  uAgents.py
clinty/my-app/: package-lock.json  package.json  tailwind.config.js  vite.config.js
clinty/my-app/.svelte-kit/: ambient.d.ts
clinty/my-app/src/lib/: Message.svelte
clinty/my-app/src/routes/: +page.svelte
server/: prototype.py  read.txt  read1.txt  read2.txt  read3.txt  testuAgents.py
