[tool.poetry]
name = "hack for social change"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdfplumber = "^0.6"
pandas = "^2.2.3"
numpy = "^2.1.3"
pytz = "^2024.2"
tzdata = "^2024.2"
fastapi = "^0.114"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
